<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.motechproject</groupId>
    <artifactId>ghana-national</artifactId>
    <name>ghana-national</name>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>idgen-omod</module>
        <module>ghana-national-core</module>
        <module>ghana-national-xforms</module>
        <module>ghana-national-tools</module>
        <module>ghana-national-web</module>
        <module>ghana-national-common</module>
        <module>ghana-national-messaging-gateway</module>
        <module>ghana-national-test</module>
    </modules>
    <properties>
        <spring.version>3.1.0.RELEASE</spring.version>
        <org.ektorp.version>1.2.2</org.ektorp.version>
        <motech-platform.version>0.12-GHANA-NATIONAL-SNAPSHOT</motech-platform.version>
        <motech-platform-contrib.version>0.12-SNAPSHOT</motech-platform-contrib.version>
        <threads>1</threads>
        <skip>false</skip>
        <exec-maven-plugin.version>1.1.1</exec-maven-plugin.version>
        <environment>qa</environment>
        <openmrs.skip>true</openmrs.skip>
        <drop.db.skip>true</drop.db.skip>
        <include.background.job.logging>false</include.background.job.logging>
    </properties>
    <repositories>
        <repository>
            <id>sonatype-repo</id>
            <url>https://repository.sonatype.org/content/groups/forge/</url>
        </repository>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>openxdata-repo</id>
            <url>https://nexus.openxdata.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>sourceforge-files</id>
            <url>http://globalplatform.sourceforge.net/repo/m2-repository/</url>
        </repository>
        <repository>
            <id>motech-repo</id>
            <name>Motech Maven Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/public</url>
        </repository>
        <repository>
            <id>searls-repo</id>
            <name>Searls Maven Repository</name>
            <url>http://searls-maven-repository.googlecode.com/svn/trunk</url>
        </repository>
        <repository>
            <id>openmrs-repo</id>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.openxdata</groupId>
            <artifactId>protocol-api</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi</groupId>
            <artifactId>hapi</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp</artifactId>
            <version>${org.ektorp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp.spring</artifactId>
            <version>${org.ektorp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-platform-common-api</artifactId>
            <version>${motech-platform.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jzlib</artifactId>
            <version>1.0.7</version>
        </dependency>
        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>commons-digester</groupId>
            <artifactId>commons-digester</artifactId>
            <version>1.8</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-beanutils</artifactId>
                    <groupId>commons-beanutils</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>
        <!--TEST DEPENDENCIES-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.me4se</groupId>
            <artifactId>me4se</artifactId>
            <scope>test</scope>
            <version>2.1.4-SNAPSHOT-20040926</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <scope>test</scope>
            <version>1.3.RC2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jsp-impl</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jstl-impl</artifactId>
            <version>1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator-annotation-processor</artifactId>
            <version>4.1.0.Final</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!--COMPILER -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!--SUREFIRE FOR UNIT TESTS-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=1024M</argLine>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/functional/**/*Test.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=1024M</argLine>
                    <printSummary>true</printSummary>
                </configuration>
            </plugin>
            <!--BUILD HELPER-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.omod</exclude>
                        <exclude>**/*.json</exclude>
                        <exclude>**/*.vm</exclude>
                        <exclude>xforms/**/*.xml</exclude>
                        <exclude>log4j.xml</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <!--PROFILES-->
    <profiles>
        <!--BUILD-NODE-->
        <profile>
            <id>buildNode</id>
            <repositories>
                <repository>
                    <id>motech.nexus</id>
                    <name>Motech Snapshots Repository</name>
                    <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
            <properties>
                <VERBOICE_HOST>192.168.42.50</VERBOICE_HOST>
            </properties>
        </profile>
    </profiles>
</project>
